<resources>
    <string name="app_name">一盆社区</string>
    <string name="paystr">待缴费(元)</string>
    <string name="gomoney">立即缴费</string>
    <string name="server">我要分期</string>
    <string name="countprice">当期应交费项目</string>
    <string name="historica">历史欠费项目</string>
    <string name="reg">手机验证</string>
    <string name="pay_str">最高可借额度(元)</string>
    <string name="paytest_str">1千元借12个月,日费用最低2毛7</string>
    <string name="pay_num">期数</string>
    <string name="pay_money">还款额</string>
    <string name="pay_countPrice">本金</string>
    <string name="pay_money_rate">息费</string>
<string name="tishi">请注意:信息提交成功不代表的起申请成功</string>
    <string name="tishi1">后续我们客服人员会和您联系后续事宜</string>
    <string name="tishi2">若您的资质无法完成分期申请，您仍需全额缴纳</string>
</resources>
