<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrrtor.yipen.VersionOne.view.EntryActivity">

    <ImageView
        android:layout_above="@id/ti4"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:src="@mipmap/selecter_bg" />
    <TextView
        android:id="@+id/ti4"
        android:layout_above="@id/ti3"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="提交信息成功"
        android:layout_marginBottom="@dimen/dp_20"
        android:textColor="@color/colOrange"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<TextView
    android:textSize="@dimen/sp_16"
    android:id="@+id/ti3"
    android:layout_above="@id/ti2"
  android:layout_centerHorizontal="true"
    android:text="@string/tishi"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />
    <TextView
        android:textSize="@dimen/sp_16"
        android:id="@+id/ti2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/tishi1"
        android:layout_above="@id/ti1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:textSize="@dimen/sp_16"
        android:gravity="center"
        android:id="@+id/ti1"
        android:layout_centerInParent="true"
        android:text="@string/tishi2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</RelativeLayout>
