<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@mipmap/bg_ruenng"

        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="@dimen/dp_10"
        android:layout_height="@dimen/dp_170">
        />
<GridLayout

            android:horizontalSpacing="@dimen/dp_10"
            android:verticalSpacing="@dimen/dp_5"
            android:orientation="vertical"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paystr"
        android:textColor="@color/colorWirte"
            android:id="@+id/text_pay1"
            android:gravity="center"
            android:textSize="@dimen/sp_14"
    ></TextView>
    <TextView
        android:textColor="@color/colorWirte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_pay2"
            android:layout_marginTop="10px"
            android:text="0.00"
            android:gravity="center"
            android:textSize="@dimen/sp_22"
    ></TextView>
    <LinearLayout
        android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/dp_5"
        android:layout_margin="@dimen/dp_30"
    >

        <Button
        android:textColor="@color/colorWirte"
            android:id="@+id/btn_pay1"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_45"
            android:layout_marginRight="@dimen/dp_18"
            android:layout_weight="1"
            android:background="@drawable/btn_selecter"
            android:text="@string/gomoney"
            android:textSize="@dimen/sp_14" />

        <Button android:layout_width="@dimen/dp_120"
            android:textColor="@color/colorWirte"
                android:background="@drawable/btn_selecter"
                android:layout_height="@dimen/dp_40"
                android:text="@string/server"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="@dimen/dp_22"
                android:layout_weight="1"
                android:id="@+id/btn_pay2"
        />
    </LinearLayout>
</GridLayout>
</RelativeLayout>